force-app/main/default/objects/WBS_CBS_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_CBS__c</fullName>
        <label>WBS/CBS</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_and_CBS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WBS and CBS</label>
        <referenceTo>WBS_CBS__c</referenceTo>
        <relationshipName>WBS_and_CBS_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WBS and CBS Detail*</label>
    <nameField>
        <displayFormat>WBS-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>